<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/diy_web_set"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:text="@string/diy_http"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.lihang.ShadowLayout
        android:id="@+id/diy_web_name0"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:hl_cornerRadius="10dp"
        app:hl_shadowColor="#6a000000"
        app:hl_shadowLimit="5dp"
        app:hl_strokeColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">
    <EditText
        android:id="@+id/diy_web_name"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/set_web_name"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAllCaps="false" />
    </com.lihang.ShadowLayout>


    <com.lihang.ShadowLayout
        android:id="@+id/diy_http0"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:hl_cornerRadius="10dp"
        app:hl_shadowColor="#6a000000"
        app:hl_shadowLimit="5dp"
        app:hl_strokeColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

    <EditText
        android:id="@+id/diy_http"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/set_http"
        android:inputType="textPersonName"
        android:singleLine="true" />
    </com.lihang.ShadowLayout>

    <Button
        android:id="@+id/save_button"
        style="@style/QMUI.BottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/set_save"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/userid"
        style="@style/QMUI.BottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_userid"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>