<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/search_word"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/search_word"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_word"
        android:layout_width="273dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:text="@string/result_word"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.lihang.ShadowLayout
        android:id="@+id/search0"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:hl_cornerRadius="10dp"
        app:hl_shadowColor="#6a000000"
        app:hl_shadowLimit="5dp"
        app:hl_strokeColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/search_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    <EditText
        android:id="@+id/search"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    </com.lihang.ShadowLayout>


    <com.lihang.ShadowLayout
        android:id="@+id/result0"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:hl_cornerRadius="10dp"
        app:hl_shadowColor="#6a000000"
        app:hl_shadowLimit="5dp"
        app:layout_constraintTop_toBottomOf="@+id/result_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hl_strokeColor="#000">
    <TextView
        android:id="@+id/result"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="360dp"
        android:layout_height="320dp"
        android:ems="10"
        android:gravity="top"
        android:singleLine="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_word" />
    </com.lihang.ShadowLayout>

    <com.lihang.ShadowLayout
        android:id="@+id/tvShadowWater"
        android:layout_width="149dp"
        android:layout_height="73dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="30dp"
        app:hl_cornerRadius="18dp"
        app:hl_layoutBackground="#fff"
        app:hl_layoutBackground_true="#ff0000"
        app:hl_shadowColor="#6a000000"
        app:hl_shadowLimit="7dp"
        app:hl_shapeMode="ripple"
        app:layout_constraintBottom_toTopOf="@+id/result0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search0"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/button"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:text="@string/eng_chs"
            android:textSize="20sp" />
    </com.lihang.ShadowLayout>

</androidx.constraintlayout.widget.ConstraintLayout>